--- a/manifests/manifest.json
+++ b/manifests/manifest.json
@@ -1,17 +1,21 @@
 {
-  "manifest_version": 3,
+  "manifest_version": 2,
 
   "name": "Getting started example",
   "description": "This extension shows a Google Image search result for the current page",
   "version": "1.0",
 
   "browser_action": {
-    "default_icon": "icon.png",
+    "default_icon": "icon.png", 
     "default_popup": "popup.html"
   },
+  "icons": { "16": "icon16.png",
+           "48": "icon48.png",
+          "128": "icon128.png" },
   "permissions": [
     "storage",
     "activeTab",
     "https://ajax.googleapis.com/"
     ]
+
 }
